fix: Remove visibility transition breaking .container animation
- Apparentaly, there's nothing such as visibility transition property
and it was causing a weird animation-interruption glitch in .container
elements.
- Fixed the issue by removing the faulty prop.

--- a/src/main.css
+++ b/src/main.css
@@ -74,9 +74,7 @@ button {
     align-items: center;
     justify-content: center;
     font-size: 2rem;
-    transition:
-        opacity 0.5s ease-in-out,
-        visibility 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .hidden {
